--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   pinput: ^5.0.0
   vibration: ^1.9.0
   google_sign_in: ^6.2.1
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.2.0
   
 
 
