--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ app.*.map.json
 # FVM Version Cache
 .fvm/
 .gitignore
+
+
+# firebase keys
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
