--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ app.*.map.json
 # firebase keys
 android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
+
+# lib
+lib/firebase_options.dart
